--- a/CV6/CV6.ioc
+++ b/CV6/CV6.ioc
@@ -18,11 +18,12 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PB0
 Mcu.Pin12=PB10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
@@ -31,7 +32,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030R8Tx
@@ -43,6 +44,13 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+PA10.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA10.GPIO_Label=DQ
+PA10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA10.GPIO_PuPd=GPIO_NOPULL
+PA10.Locked=true
+PA10.PinState=GPIO_PIN_SET
+PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
