--- a/CV2/CV2.ioc
+++ b/CV2/CV2.ioc
@@ -34,6 +34,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F030R8Tx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -81,11 +82,8 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LED2
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC0.GPIO_Label=S2
-PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
-PC0.Signal=GPIO_Input
+PC0.Signal=GPXTI0
 PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC1.GPIO_Label=S1
 PC1.GPIO_PuPd=GPIO_PULLUP
@@ -154,10 +152,12 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 board=NUCLEO-F030R8
 boardIOC=true
-isbadioc=false
+isbadioc=true
